@@ -519,7 +519,7 @@ function(model,
 {
   digits <- getOption("digits"); options(digits = 15)
 
-  message("REBMIX Version 2.8.0")
+  message("REBMIX Version 2.8.1")
  
   flush.console()
   
