@@ -390,7 +390,7 @@ int Rngmix::RunTemplateFile(char *file)
     }
 
     #if (_REBMIXEXE)
-    printf("RNGMIX Version 2.8.0\n");
+    printf("RNGMIX Version 2.8.1\n");
     #endif
 
 S0: while (fgets(line, 2048, fp) != NULL) {
